super-container fix centers elements on mobile screens

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ h1 {
 }
 
 @media screen and (max-width: 800px) { /* for smartphones and tablets */
+  .super-container {
+    width: 900px;
+  }
+
   h1 {
     margin: auto;
     /*width: 100px;*/
